--- a/contato.html
+++ b/contato.html
@@ -66,7 +66,7 @@
                         </select>
                     </fieldset>
                     
-                    <label class="checkbox"><input class="inputCheck" type="checkbox" name="EmailResposta" checked>Gostaria de receber atualizações por email?</label>
+                    <label class="checkbox"><input class="inputCheck" type="checkbox" name="emailResposta" checked>Gostaria de receber atualizações por email?</label>
                    
 
                     <input type="submit" href="http://localhost:3000" value="Enviar formulário" class="enviar">
