--- a/public/contato.html
+++ b/public/contato.html
@@ -69,7 +69,7 @@
                     <label class="checkbox"><input class="inputCheck" type="checkbox" name="emailResposta" checked>Gostaria de receber atualizações por email?</label>
                    
 
-                    <input type="submit" href="https://donadoce.herokuapp.com:3000" value="Enviar formulário" class="enviar">
+                    <input type="submit" href="https://donadoce.herokuapp.com" value="Enviar formulário" class="enviar">
             </form>
             
             <table>
