--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
             </section>
             <div class="video">
                 <p class="TituloSobre">Assista nosso trabalho</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zyLRlbVBKWs" 
+                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=RgpKb1Ex38M" 
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                  allowfullscreen></iframe>
             </div>    
