--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,8 @@
             </section>
             <div class="video">
                 <p class="TituloSobre">Assista nosso trabalho</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=RgpKb1Ex38M" 
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                 allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/aPCSChilOKw" frameborder="0" allow="accelerometer; 
+               autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>    
         </main>
         <section class="mapa">
