--- a/public/produtos.html
+++ b/public/produtos.html
@@ -1,59 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-        <title>Produtos - Dona Doce</title>
-        <link rel="stylesheet" href="reset.css">
-        <link  rel="stylesheet" href="produtos.css">
-        <link rel="stylesheet" href="contato.css">
-        
-    </head>
-    <body>
-        <header class="tituloPrimeiro">
-            <div class="caixa">
-                <h1><img id="logo" src="imagens/logo.png" alt="Logo da Dona Doce"></h1>
-                <nav>
-                    <ul>
-                        <li><a  href="index.html">Home</a></li>
-                            <li><a href="produtos.html">Produtos</a></li>
-                            <li><a href="contato.html">Contato</a></li>     
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main>
-            <ul class="listaProdutos">
-                <li>
-                    <h2 class="tituloOpcao">Doces</h2>
-                    <img class="imgProduto" src="imagens/doces.jpg">
-                    <p class="frase">Preços a partir de:</p>
-                    <p class="preco">R$ 50</p>
-                </li>
-                <li>
-                    <h2 class="tituloOpcao">Bolos</h2>
-                    <img class="imgProduto" src="imagens/bolos.jpg">
-                    <p class="frase">Preços a partir de:</p>
-                    <p class="preco">R$ 20</p>
-                   
-                </li>
-                <li>
-                    <h2 class="tituloOpcao">Ovos da páscoa</h2>
-                    <img class="imgProduto" src="imagens/logo.png">
-                    <p class="frase">Preços a partir de:</p>
-                    <p class="preco">R$ 10</p>
-                </li>
-            </ul>
-        </main>
-        <footer>
-            <section>
-                <A id="email" HREF="mailto:donadocedelivery@gmail.com"></A>
-                <A id="whatsapp" HREF="https://api.whatsapp.com/send?phone=+55(85)99840-4443"></A>
-                <A id="instagram" HREF="https://www.instagram.com/donadoce.br/"></A>
-             </section>
-            <img width="250px" height="250px" src="imagens/logo.png">
-            <p class="copyright">&copy; Copyright Dona Doce - 2020</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Produtos - Dona Doce</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="produtos.css" />
+    <link rel="stylesheet" href="contato.css" />
 
-        </footer>
-    </body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="tituloPrimeiro">
+      <div class="caixa">
+        <h1>
+          <img id="logo" src="imagens/logo.png" alt="Logo da Dona Doce" />
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <ul class="listaProdutos">
+        <li>
+          <h2 class="tituloOpcao">Doces</h2>
+          <img class="imgProduto" src="imagens/doces.jpg" />
+          <p class="frase">Preços a partir de:</p>
+          <p class="preco">R$ 50</p>
+        </li>
+        <li>
+          <h2 class="tituloOpcao">Bolos</h2>
+          <img class="imgProduto" src="imagens/bolos.jpg" />
+          <p class="frase">Preços a partir de:</p>
+          <p class="preco">R$ 20</p>
+        </li>
+        <li>
+          <h2 class="tituloOpcao">Ovos da páscoa</h2>
+          <img class="imgProduto" src="imagens/logo.png" />
+          <p class="frase">Preços a partir de:</p>
+          <p class="preco">R$ 10</p>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <section>
+        <a class="fa fa-google" href="mailto:donadocedelivery@gmail.com"></a>
+        <a
+          id="whatsapp"
+          href="https://api.whatsapp.com/send?phone=+55(85)99840-4443"
+        ></a>
+        <a
+          class="fa fa-instagram"
+          href="https://www.instagram.com/donadoce.br/"
+        ></a>
+
+        <a
+          href="https://www.facebook.com/Dona-Doce-115175586848124/"
+          class="fa fa-facebook"
+        ></a>
+      </section>
+      <img width="250px" height="250px" src="imagens/logo.png" />
+      <p class="copyright">&copy; Copyright Dona Doce - 2020</p>
+    </footer>
+  </body>
 </html>
