:iphone: :plus: :lipstick:

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     </div>
     <main>
       <section class="Tituloprincipal">
-        <h2 class="TituloSobre">Sobre Dona Doce</h2>
+        <h2 class="TituloSobreUm">Sobre Dona Doce</h2>
         <p class="texto">
           A doceria <strong>Dona Doce</strong> está lozalizada na cidade de
           Fortaleza.Nós fazemos delivery de doces para você!
