--- a/public/produtos.html
+++ b/public/produtos.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Produtos - Dona Doce</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="produtos.css" />
-    <link rel="stylesheet" href="contato.css" />
+    <title>Dona Doce</title>
 
+    <link rel="stylesheet" href="reset.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -34,6 +37,10 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="produtos.css" />
+    <link rel="stylesheet" href="contato.css" />
   </head>
   <body>
     <header class="tituloPrimeiro">
@@ -75,22 +82,19 @@
     <footer>
       <section>
         <a class="fa fa-google" href="mailto:donadocedelivery@gmail.com"></a>
-        <a
-          id="whatsapp"
-          href="https://api.whatsapp.com/send?phone=+55(85)99840-4443"
-        ></a>
-        <a
-          class="fa fa-instagram"
-          href="https://www.instagram.com/donadoce.br/"
-        ></a>
-
-        <a
-          href="https://www.facebook.com/Dona-Doce-115175586848124/"
-          class="fa fa-facebook"
-        ></a>
+        <a class="fa fa-whatsapp" href="https://api.whatsapp.com/send?phone=+55(85)99840-4443"></a>
+        <a class="fa fa-instagram"    href="https://www.instagram.com/donadoce.br/"></a>
+        <a href="https://www.facebook.com/Dona-Doce-115175586848124/" class="fa fa-facebook"></a>
       </section>
-      <img width="250px" height="250px" src="imagens/logo.png" />
-      <p class="copyright">&copy; Copyright Dona Doce - 2020</p>
+      <div>
+        <img
+          width="250px"
+          height="250px"
+          src="imagens/logo.png"
+          alt="Logo da Dona Doce"
+        />
+        <p class="copyright">&copy; Copyright Dona Doce - 2020</p>
+      </div>
     </footer>
   </body>
 </html>
