--- a/public/contato.html
+++ b/public/contato.html
@@ -61,11 +61,8 @@
     </header>
 
     <main class="contatoList">
-      <form
-        class="contatoForm"
-        action="https://donadoce.herokuapp.com/submit"
-        method="POST"
-      >
+         <form class="contatoForm" action="https://airform.io/donadocedelivery@gmail.com" method="post">
+
         <label for="nome">Nome</label>
         <input
           type="nome"
